# otvirare

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
docs/: scoping.md
