[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_backend"

[project]
name = "otvirare"
version = "0.1.0"
description = "Convert scientific research institution annual reports to structured semantic HTML"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Otvirare Team"}
]
keywords = ["semantic-html", "annual-reports", "scientific-research", "schema.org"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "lxml",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
]

